--- a/icon.qrc
+++ b/icon.qrc
@@ -9,5 +9,7 @@
         <file>icon/startButton.png</file>
         <file>icon/stopButton_active.png</file>
         <file>icon/stopButton.png</file>
+        <file>icon/task_inactive.png</file>
+        <file>icon/task_active.png</file>
     </qresource>
 </RCC>
